--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-html {
+/* html {
   box-sizing: border-box;
   line-height: 1.5;
   font-family: Lato, sans-serif;
@@ -13,81 +13,58 @@ body {
   display: block;
   margin: 0;
   width: 100%;
+  padding-bottom: 1em;
+}
+
+img {
+  display: block;
+  width: 100%;
 }
 
 section {
   display: block;
   text-align: center;
-  width: 100%;
-  padding: 1.5em;
+  padding: 2em 0;
   margin: 0;
-  margin-top: .5rem;
 }
 
 .secondpart {
   display: inline-block;
   vertical-align: middle;
-  padding: .4em .75em;
   max-width: 25em;
+  padding: .5em .5em;
   width: 100%;
-  margin: 0;
-  margin-left: .6rem;
-}
-
-h2 {
-  color: black;
-  font-size: 1.5rem;
-  font-weight: bold;
-  letter-spacing: .4px;
-  text-align: left;
-  max-width: 25em;
-  padding: 0;
-  margin-bottom: 1.5rem;
-  margin-top: -.4rem;
-}
-
-p {
-  color: black;
-  text-align: left;
-  font-weight: normal;
-  max-width: 25em;
-  width: 100%;
-  height: 100%;
-  margin-bottom: 1.5rem;
-  margin-right: 1.5rem;
-  margin-top: 0;
+  margin-left: .4em;
 }
 
 .image {
   display: inline-block;
   vertical-align: middle;
   max-width: 25em;
-  padding: .5em .75em;
-  margin: 0;
-  margin-bottom: 1.5rem;
-  object-fit: contain;
+  padding: 1em;
 }
 
-img {
-  display: block;
-  margin: 0;
-  max-width: 25em;
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-figure {
-  margin: 0;
-}
-
-a {
-  display: inline-block;
+h2 {
   color: black;
   text-align: left;
+  width: 100%;
+  padding: 0;
+  margin-bottom: 1.5rem;
+  margin-top: .4rem;
 }
 
-a:hover {
+p {
+  color: black;
+  text-align: left;
+  font-weight: normal;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  padding-right: .75em;
+  margin-bottom: 1.5rem;
+}
+
+.btn:hover {
   color: #666;
 }
 
@@ -96,10 +73,89 @@ a:hover {
   padding: .5em 1em;
   font-size: 1em;
   text-align: left;
+  color: black;
   border-style: solid;
   border-color: #333;
   border-radius: 7px;
-  margin-bottom: 1.5rem;
+  text-decoration: none;
+  float: left;
+} */
+
+html {
+  box-sizing: border-box;
+  line-height: 1.5;
+  font-family: Lato, sans-serif;
+  background-color: #eee9de;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  padding-bottom: 2.5em;
+}
+
+img {
+  display: block;
+  width: 100%;
+}
+
+section {
+  display: block;
+  text-align: center;
+  padding: 0;
+  margin-top: 1rem;
+}
+
+.secondpart {
+  display: inline-block;
+  vertical-align: middle;
+  max-width: 25em;
+  padding: .5em 1em .3em;
+  margin-top: 0;
+}
+
+.image {
+  display: inline-block;
+  vertical-align: middle;
+  max-width: 25em;
+  padding: .4em 1em .5em;
+  margin: 1.5rem;
+  margin-right: 0;
+  margin-left: 0;
+  margin-bottom: 0;
+}
+
+h2 {
+  color: black;
+  text-align: left;
+  width: 100%;
+}
+
+p {
+  color: black;
+  text-align: left;
+  font-weight: normal;
+  padding: 0;
+  margin-top: 1.5em;
+  margin-bottom: 1.4rem;
+}
+
+.btn:hover {
+  color: #666;
+}
+
+.btn {
+  display: inline-block;
+  padding: .5em 1em;
+  font-size: 1.1rem;
+  text-align: left;
+  color: black;
+  border-style: solid;
+  border-color: #333;
+  border-radius: 7px;
   text-decoration: none;
   float: left;
 }
